# Terracotta

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
Terracotta/: CMakeLists.txt  Terracotta.cpp  Terracotta.h
TerracottaEngine/: CMakeLists.txt
TerracottaEngine/res/: DebugFrag.glsl  DebugVert.glsl  DefaultFrag.glsl  DefaultVert.glsl
TerracottaEngine/src/: Application.cpp  Application.hpp  AudioSystem.cpp  AudioSystem.hpp  CameraSystem.cpp  CameraSystem.hpp  EngineAPI.cpp  EngineAPI.h  EngineAPI.hpp  EventSystem.cpp  EventSystem.hpp  InputSystem.cpp  InputSystem.hpp  JSONParser.cpp  JSONParser.hpp  Layers.cpp  Layers.hpp  Main.cpp  PlatformDLL.cpp  PlatformDLL.hpp  RandomGenerator.cpp  RandomGenerator.hpp  RenderProxy.cpp  RenderProxy.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SharedDataTypes.h  Subsystem.cpp  Subsystem.hpp  Terracotta.cpp  Textures.cpp  Textures.hpp  VertexInput.cpp  VertexInput.hpp  Window.cpp  Window.hpp
TerracottaGame/: CMakeLists.txt
TerracottaGame/res/maps/default_map/: DefaultMap.json
TerracottaGame/res/tileset/: tileset_metadata.json
TerracottaGame/src/: Chunk.cpp  Chunk.hpp  EngineConnection.hpp  Foobar.cpp  Foobar.hpp  Game.cpp  Game.hpp  GameAPI.cpp  GameAPI.h  GameAPI.hpp  Tile.cpp  Tile.hpp  World.cpp  World.hpp
